Updates in 20210210 (v1.1):

+ Add option for specifying password in file (-pf), because passwords on command line that have special chars like \ or ^ have problems

! Fixed a bug that prevented APFS decryption in some disks
! Skip reading deleted apfs blocks to prevent stale/bad data
! Fixed a bug in iDeviceBackups plugin

Updates in 20210210 (v1.0):

+ Code updated for Python 3.9, windows dep. libs compiled for 3.9
+ RECON (by Sumuri) created .sparseimage files are now supported
+ Add CloudTabs, BrowserState.db parsing to SAFARI
+ Fixes exported folder structure for idevicebackups
+ Show imsg alias (if used)
+ Better APFS parsing

Updates in 20201228 (v0.9):

+ Introducing ios_apt - parses ios full disk images
+ ios_apt plugins - APPS, BASICINFO, FSEVENTS, INETACOUNTS, NETUSAGE, NETWORKING, SAFARI, SCREENTIME, SPOTLIGHT, TERMSESSIONS, WIFI
+ Support for ios 14 artifacts
+ Improved support for Big Sur (macOS 11) Sealed volumes
+ Python 3.8 compiled libraries for windows available
+ Adds full support for decrypting FileVault when HFS upgraded to APFS
+ Safari binarycookie parsing for Big Sur (new location)
+ Add views for Spotlight ios/user db output removing empty columns
+ Hex in ID col + reverse id col for ios spotlight

! Optimization in file metadata lookup
! Detect encrypted NOTES properly + query fixes
! Fixed chrome Session parsing, fixed bad timestamps
! Fix ExportedFiles db having double entries
! Fix for file writing exception, add utf8 for log
! Fix edge case apfs parsing symlink

Updates in 20200917 (v0.7):

+ New Plugins - SAVEDSTATE, CHROME, ARD, SUDOLASTRUN, DOCUMENTREVISIONS
+ Support for Big Sur (macOS 11) Sealed volumes
+ Support for Big Sur changed/new artifact locations and ZSH sessions
+ Add .sh_history parsing for normal users

! Add workaround for an issue with MOUNTED mode on Xways Forensics mounted disks
! Fixes to deserializer and ccl_bplist (for edge cases on newer macOS)
! Fixes to MOUNTEDMODE